src/Themes.scss
/* ... */
/* Dark Theme */
body.dark-theme {
    background-color: $c2lc-very-very-very-dark-green-color;


    .AudioFeedbackToggleSwitch {
        background-color: #B9BEC6;
    
        &:focus {
            box-shadow: 0 0 0 $c2lc-focus-indicator-width white;
        }
    }

    .App__app-heading {
        color: white;
    }

    .App__command-palette {
        background-color: $c2lc-very-dark-green-color;
    }

    .App__command-palette-command-container {
        &::-webkit-scrollbar {
            background-color: $c2lc-very-dark-green-color;
        }
        &::-webkit-scrollbar-thumb {
            background-color: $c2lc-dark-green-color;
        }
    }

    .App__command-palette-heading {
        color: #F1AE5B;
    }

    button.btn.command-block:focus {
        box-shadow: 0 0 0 $c2lc-focus-indicator-width white;
        border: 2px solid $c2lc-very-dark-green-color;
    }

    .Scene {
        background-color: $c2lc-very-very-dark-green-color;
    }

    .Scene__grid-line {
        stroke: $c2lc-very-dark-green-color;
    }

    .Scene__path-line {
        stroke: white;
    }

    .Character__icon-background {
        fill: $c2lc-dark-green-color;
    }

    .ProgramBlockEditor__container {
        background-color: $c2lc-very-very-very-dark-blue-color;
        border: 2px solid $c2lc-very-very-very-dark-blue-color;
    }

    .ProgramBlockEditor__character-column {
        background-color: $c2lc-very-dark-green-color;
    }

    .ProgramBlockEditor__header {        
        background-color: $c2lc-very-very-very-dark-blue-color;
        color: #EBFAF8;
    }

    .ProgramBlockEditor__program-sequence-scroll-container {
        background-color: $c2lc-very-very-dark-green-color;
    }

    .AddNode__collapsed-icon {
        background-color: white;
        svg {
            stroke: black;
            fill: black;
        }
    }

    .AddNode__expanded-button {
        border: 2px solid $c2lc-medium-grey-color;
        background-color: $c2lc-very-very-dark-green-color;
        box-shadow: none;
        svg path {
            stroke: $c2lc-medium-grey-color;
        }
        &:hover {
            svg path {
                stroke: black;
            }
        }
    }

    .App__playAndShare-background {
        background-color: #30444e;
    }

    .App__shareButton-container button {
        background-color: $c2lc-dark-green-color;
        color: $c2lc-light-green-color;
    }

    button.btn.PlayButton:focus, button.btn.StopButton:focus {
        border-color: white;
    }

    .ProgramSpeedController__slider {
        &:focus {
            outline-color: white;
        }
    }

    button.btn.ShareButton:focus {
        box-shadow: 0 0 0 $c2lc-focus-indicator-width white;
        border-color: black;
    }
}
/* ... */

